Restructure README with exact rubric headers, add protobuf fix and report sections to notebook
- README: Renamed sections to "Project Details", "Getting Started", "Instructions"
  per reviewer feedback on expected structure
- Notebook: Added !pip install protobuf==3.20.3 cell to fix TypeError
  with newer protobuf versions and Unity ML-Agents v0.4
- Notebook: Added full report content (Learning Algorithm, architectures,
  hyperparameters, Plot of Rewards, Ideas for Future Work) as markdown
  cells so the notebook is self-contained

--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -3,15 +3,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# Collaboration and Competition\n",
-    "\n",
-    "---\n",
-    "\n",
-    "This notebook trains a self-play DDPG agent to solve the Unity Tennis environment, where two agents learn to keep a ball in play over a net.\n",
-    "\n",
-    "### 1. Start the Environment"
-   ]
+   "source": "# Collaboration and Competition\n\n---\n\nThis notebook trains a self-play DDPG agent to solve the Unity Tennis environment, where two agents learn to keep a ball in play over a net.\n\n### 0. Install Dependencies\n\n**Important**: The bundled Unity ML-Agents v0.4 package requires `protobuf==3.20.3`. If you encounter a `TypeError: Descriptors cannot be created directly` error, run the cell below to fix it, then restart the kernel."
+  },
+  {
+   "cell_type": "code",
+   "source": "!pip install protobuf==3.20.3",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": "### 1. Start the Environment",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -58,7 +62,7 @@
     "\n",
     "Two agents control rackets to bounce a ball over a net:\n",
     "- **Reward**: +0.1 for hitting the ball over the net, -0.01 if ball hits ground or goes out of bounds\n",
-    "- **Observation**: 24 dimensions per agent (3 stacked frames \u00d7 8 variables: ball/racket position and velocity)\n",
+    "- **Observation**: 24 dimensions per agent (3 stacked frames × 8 variables: ball/racket position and velocity)\n",
     "- **Action**: 2 continuous values per agent (movement toward/away from net, jumping), each in [-1, 1]\n",
     "- **Solve condition**: Average of max(agent1_score, agent2_score) >= 0.5 over 100 consecutive episodes"
    ]
@@ -108,9 +112,9 @@
    "source": [
     "### 3. Train the Agent\n",
     "\n",
-    "We use **self-play DDPG**: both agents share one actor, one critic, and one replay buffer. This works because Tennis is symmetric \u2014 an optimal policy for one side is optimal for the other.\n",
+    "We use **self-play DDPG**: both agents share one actor, one critic, and one replay buffer. This works because Tennis is symmetric — an optimal policy for one side is optimal for the other.\n",
     "\n",
-    "Key adaptation from the Continuous Control project: **noise decay** (\u03c3 \u00d7 0.9995 per episode, with floor 0.01). In sparse-reward environments, the agent needs heavy exploration early but must quiet down once it finds a fragile cooperative equilibrium."
+    "Key adaptation from the Continuous Control project: **noise decay** (σ × 0.9995 per episode, with floor 0.01). In sparse-reward environments, the agent needs heavy exploration early but must quiet down once it finds a fragile cooperative equilibrium."
    ]
   },
   {
@@ -134,19 +138,19 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Episode 100\tAvg: 0.004\tNoise \u03c3: 0.1903\t(6s)\n",
-      "Episode 200\tAvg: 0.005\tNoise \u03c3: 0.1812\t(12s)\n",
-      "Episode 300\tAvg: 0.004\tNoise \u03c3: 0.1725\t(17s)\n",
-      "Episode 400\tAvg: 0.000\tNoise \u03c3: 0.1643\t(22s)\n",
-      "Episode 500\tAvg: 0.000\tNoise \u03c3: 0.1565\t(28s)\n",
-      "Episode 600\tAvg: 0.001\tNoise \u03c3: 0.1491\t(33s)\n",
-      "Episode 700\tAvg: 0.000\tNoise \u03c3: 0.1420\t(38s)\n",
-      "Episode 800\tAvg: 0.004\tNoise \u03c3: 0.1353\t(43s)\n",
-      "Episode 900\tAvg: 0.001\tNoise \u03c3: 0.1289\t(49s)\n",
-      "Episode 1000\tAvg: 0.002\tNoise \u03c3: 0.1228\t(54s)\n",
-      "Episode 1100\tAvg: 0.004\tNoise \u03c3: 0.1170\t(60s)\n",
-      "Episode 1200\tAvg: 0.013\tNoise \u03c3: 0.1114\t(68s)\n",
-      "Episode 1300\tAvg: 0.155\tNoise \u03c3: 0.1044\t(132s)\n",
+      "Episode 100\tAvg: 0.004\tNoise σ: 0.1903\t(6s)\n",
+      "Episode 200\tAvg: 0.005\tNoise σ: 0.1812\t(12s)\n",
+      "Episode 300\tAvg: 0.004\tNoise σ: 0.1725\t(17s)\n",
+      "Episode 400\tAvg: 0.000\tNoise σ: 0.1643\t(22s)\n",
+      "Episode 500\tAvg: 0.000\tNoise σ: 0.1565\t(28s)\n",
+      "Episode 600\tAvg: 0.001\tNoise σ: 0.1491\t(33s)\n",
+      "Episode 700\tAvg: 0.000\tNoise σ: 0.1420\t(38s)\n",
+      "Episode 800\tAvg: 0.004\tNoise σ: 0.1353\t(43s)\n",
+      "Episode 900\tAvg: 0.001\tNoise σ: 0.1289\t(49s)\n",
+      "Episode 1000\tAvg: 0.002\tNoise σ: 0.1228\t(54s)\n",
+      "Episode 1100\tAvg: 0.004\tNoise σ: 0.1170\t(60s)\n",
+      "Episode 1200\tAvg: 0.013\tNoise σ: 0.1114\t(68s)\n",
+      "Episode 1300\tAvg: 0.155\tNoise σ: 0.1044\t(132s)\n",
       "\n",
       "*** Solved at episode 1336!  100-ep avg: 0.510 (196s) ***"
      ]
@@ -189,7 +193,7 @@
     "\n",
     "    if i_episode % 100 == 0:\n",
     "        elapsed = time.time() - t_start\n",
-    "        print(f'Episode {i_episode}\\tAvg: {rolling_avg:.3f}\\tNoise \u03c3: {agent.noise_sigma:.4f}\\t({elapsed:.0f}s)')\n",
+    "        print(f'Episode {i_episode}\\tAvg: {rolling_avg:.3f}\\tNoise σ: {agent.noise_sigma:.4f}\\t({elapsed:.0f}s)')\n",
     "\n",
     "    if rolling_avg >= 0.5 and not solved:\n",
     "        elapsed = time.time() - t_start\n",
@@ -248,7 +252,7 @@
     "ax.axhline(y=0.5, color='red', linestyle='--', alpha=0.7, label='Solve Threshold (0.5)')\n",
     "ax.set_xlabel('Episode')\n",
     "ax.set_ylabel('Score (Max over Agents)')\n",
-    "ax.set_title('Self-Play DDPG Training \u2014 Tennis')\n",
+    "ax.set_title('Self-Play DDPG Training — Tennis')\n",
     "ax.legend()\n",
     "ax.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
@@ -322,6 +326,11 @@
    "source": [
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": "---\n\n## Report\n\n### Learning Algorithm\n\nThis project implements **self-play DDPG (Deep Deterministic Policy Gradients)** for the Unity Tennis environment.\n\n**DDPG** is an actor-critic algorithm for continuous action spaces:\n- **Actor network** μ(s|θ^μ): Learns a deterministic policy mapping states to continuous actions.\n- **Critic network** Q(s,a|θ^Q): Evaluates state-action pairs, providing gradient signal for the actor.\n\n**Self-Play Architecture**: Since Tennis is symmetric, both agents share one actor network (and its target), one critic network (and its target), and one replay buffer. This doubles the effective experience rate.\n\n**Target Networks** are updated via soft updates: `θ_target = τ · θ_local + (1 - τ) · θ_target` with τ = 0.001.\n\n**Exploration Noise with Decay**: Ornstein-Uhlenbeck noise is added to actions for exploration. The noise sigma decays by 0.9995 per episode (from 0.2 to ~0.09 by episode 1500) with a floor of 0.01. This is critical for sparse-reward environments — the agent needs aggressive exploration early but must quiet down to maintain the fragile cooperative equilibrium.\n\n#### Neural Network Architectures\n\n**Actor**: `Input (24) → FC1 (128, ReLU) → FC2 (128, ReLU) → FC3 (2, Tanh)` — 19,970 parameters\n\n| Layer | Parameters |\n|---|---|\n| FC1: 24 → 128 | 3,200 |\n| FC2: 128 → 128 | 16,512 |\n| FC3: 128 → 2 | 258 |\n| **Total** | **19,970** |\n\n**Critic**: `Input (24) → FC1 (128, ReLU) → [concat action (2)] → FC2 (130→128, ReLU) → FC3 (128→64, ReLU) → FC4 (64→1)` — 28,289 parameters\n\n| Layer | Parameters |\n|---|---|\n| FC1: 24 → 128 | 3,200 |\n| FC2: 130 → 128 | 16,768 |\n| FC3: 128 → 64 | 8,256 |\n| FC4: 64 → 1 | 65 |\n| **Total** | **28,289** |\n\nActions are injected after the first hidden layer. No BatchNorm is used. Hidden layers use fan-in uniform initialization (±1/√fan_in); output layers use uniform(-3e-3, 3e-3).\n\n#### Hyperparameters\n\n| Parameter | Value | Rationale |\n|---|---|---|\n| Replay buffer size | 100,000 | Smaller than Reacher (2 agents vs. 20) |\n| Batch size | 128 | Proportional to data availability |\n| Discount factor (γ) | 0.99 | Standard; values future rewards highly |\n| Soft update rate (τ) | 0.001 | Slow blending for target network stability |\n| Actor learning rate | 1e-4 | Standard DDPG, Adam optimizer |\n| Critic learning rate | 1e-3 | 10× actor LR (standard DDPG practice) |\n| Learn every | 1 step | Only 2 agents producing transitions |\n| Num updates | 1 | Single update per step |\n| OU θ | 0.15 | Standard mean-reversion rate |\n| OU σ (initial) | 0.2 | Standard noise scale |\n| **Noise decay** | **0.9995/episode** | Reduces σ from 0.2 → ~0.09 by episode 1500 |\n| **Noise floor** | **0.01** | Prevents noise from vanishing completely |\n| Gradient clipping | 1.0 | Clips critic gradients to stabilize training |\n| Max episodes | 5,000 | Patience for sparse rewards |\n\n### Plot of Rewards\n\nThe plot above (Section 4) shows the max score across both agents per episode (light blue) and the 100-episode rolling average (dark blue). The environment was **solved at episode 1336**, when the 100-episode rolling average first exceeded 0.5.\n\n**Training dynamics**: Scores remain near zero for the first ~1200 episodes as the agents explore randomly. Around episode 1200, individual scores begin spiking, and the rolling average rises rapidly from 0.01 to 0.5 over ~130 episodes. This sudden onset reflects the cooperative nature of Tennis: once one agent learns to return the ball, the other agent starts receiving positive experiences too, creating a positive feedback loop.\n\n**Greedy evaluation** (Section 5): The saved checkpoint achieved an average score of **2.042** (σ = 0.906, min = 0.000, max = 2.700) over 100 episodes with no exploration noise, confirming robust performance well above the 0.5 solve threshold.\n\n### Ideas for Future Work\n\n1. **MADDPG (Multi-Agent DDPG)** (Lowe et al., 2017): Give each agent its own actor and critic, where the critic receives observations and actions of all agents. This \"centralized training, decentralized execution\" approach could handle asymmetric environments where the two sides have different optimal strategies.\n\n2. **Prioritized Experience Replay** (Schaul et al., 2016): In sparse-reward environments like Tennis, the vast majority of transitions have zero reward. Prioritizing high-reward transitions would focus learning on rare informative experiences, potentially accelerating convergence through the initial ~1200-episode \"desert\" phase.\n\n3. **TD3 (Twin Delayed DDPG)** (Fujimoto et al., 2018): Addresses DDPG's overestimation bias with twin critics, delayed policy updates, and target policy smoothing. These stabilization techniques could reduce variance in the learned policy and produce more consistent rally behavior.\n\n4. **PPO with Self-Play**: PPO's clipped objective is more robust to hyperparameter choices than DDPG. Combined with self-play, it could provide more stable training without the need for careful noise decay tuning.\n\n5. **Curriculum Learning**: Start with shorter rallies (e.g., reward for just making contact) and gradually increase difficulty. This would bridge the sparse-reward gap by providing denser early feedback, potentially eliminating the 1200-episode desert observed in training.",
+   "metadata": {}
   }
  ],
  "metadata": {
